# WEGA-HPG-cpp-wx

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/ui/: CMakeLists.txt  constants.hpp  macropanel.cpp  macropanel.hpp  mainwindow.cpp  mainwindow.hpp  micropanel.cpp  micropanel.hpp
